[package]
name = "rustis"
version = "0.1.0"
authors = ["tristan.giga@free.fr"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
futures = "0.3.31"
memchr = "2.7.5"
thiserror = "2.0.11"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
